[gd_scene load_steps=25 format=3 uid="uid://p042rqn4c74u"]

[ext_resource type="Script" path="res://Scripts/GameManager.gd" id="1_itpwq"]
[ext_resource type="PackedScene" uid="uid://blmikl8w11roj" path="res://Scenes/player.tscn" id="2_n3kdf"]
[ext_resource type="PackedScene" uid="uid://bkwrq0qtta0ix" path="res://Scenes/enemy_spawner.tscn" id="3_fpmdp"]
[ext_resource type="Script" path="res://Scripts/wave.gd" id="4_7auck"]
[ext_resource type="Script" path="res://Scripts/UIManager.gd" id="5_1pdr0"]
[ext_resource type="Resource" uid="uid://lhgub04y3bdb" path="res://Resources/wave1.tres" id="5_52t8s"]
[ext_resource type="Script" path="res://Scripts/ShopManager.gd" id="5_jxmqa"]
[ext_resource type="Resource" uid="uid://bm2q7xl0iapv5" path="res://Resources/wave2.tres" id="6_cqumk"]
[ext_resource type="Texture2D" uid="uid://b27w0ddjiakbn" path="res://Assets/Sprites/UI/ui_overlay.png" id="6_pvymq"]
[ext_resource type="Resource" uid="uid://2nbfix1i2x45" path="res://Resources/wave3.tres" id="7_df5er"]
[ext_resource type="Texture2D" uid="uid://baywma4a7d8ba" path="res://Assets/Sprites/UI/32x32_button.png" id="7_vnyei"]
[ext_resource type="Texture2D" uid="uid://dpnyf8ftq0aek" path="res://Assets/Sprites/UI/outline.png" id="8_3c8yg"]
[ext_resource type="Theme" uid="uid://bug82i6sy1xtq" path="res://Themes/texture_button_theme.tres" id="8_4ctao"]
[ext_resource type="Resource" uid="uid://dk16077xloovp" path="res://Resources/wave4.tres" id="8_frnkb"]
[ext_resource type="Resource" path="res://Resources/wave5.tres" id="9_qpx83"]
[ext_resource type="Texture2D" uid="uid://ccokfawkm4ps4" path="res://Assets/Sprites/UI/buy_icon.png" id="9_yckrj"]
[ext_resource type="Texture2D" uid="uid://cdwj2q2l6ab3m" path="res://Assets/Sprites/UI/reroll_icon.png" id="10_btva0"]
[ext_resource type="Script" path="res://Scripts/UI/health_ui.gd" id="11_4w2qp"]
[ext_resource type="Script" path="res://Scripts/UI/orb_stats.gd" id="11_v6kre"]
[ext_resource type="PackedScene" uid="uid://wj4fa28pbvk4" path="res://Scenes/circle.tscn" id="13_o8hoq"]
[ext_resource type="PackedScene" uid="uid://bampk2ki2ygjd" path="res://Scenes/UI/damage_dictionary.tscn" id="18_dwmxg"]
[ext_resource type="Script" path="res://Scripts/UI/TooltipManager.gd" id="22_q1apf"]

[sub_resource type="Theme" id="Theme_t5p71"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v52ci"]
bg_color = Color(0, 0.0352941, 0.0627451, 0.784314)
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color(0.882274, 0.279412, 0.473383, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_color = Color(0.811765, 0, 0, 0)
shadow_size = 10

[node name="EmilScene" type="Node2D"]
script = ExtResource("1_itpwq")

[node name="Player" parent="." instance=ExtResource("2_n3kdf")]
position = Vector2(960, 540)
healthRegeneration = 0.0

[node name="Marker2D" type="Marker2D" parent="Player"]

[node name="Enemies" type="Node2D" parent="."]

[node name="EnemySpawner" parent="." node_paths=PackedStringArray("center", "enemies") instance=ExtResource("3_fpmdp")]
waves = Array[ExtResource("4_7auck")]([ExtResource("5_52t8s"), ExtResource("6_cqumk"), ExtResource("7_df5er"), ExtResource("8_frnkb"), ExtResource("9_qpx83")])
center = NodePath("../Player")
enemies = NodePath("../Enemies")

[node name="GameplayUi" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0
script = ExtResource("5_1pdr0")

[node name="UiOverlay" type="Sprite2D" parent="GameplayUi"]
scale = Vector2(3, 3)
texture = ExtResource("6_pvymq")
centered = false

[node name="LeftMenuColumn" type="Control" parent="GameplayUi"]
anchors_preset = 0
offset_right = 420.0
offset_bottom = 1080.0

[node name="OrbStats" type="Control" parent="GameplayUi/LeftMenuColumn"]
anchors_preset = 0
offset_top = 669.0
offset_right = 40.0
offset_bottom = 709.0
scale = Vector2(2, 2)
script = ExtResource("11_v6kre")

[node name="InnerOrbLabel" type="Label" parent="GameplayUi/LeftMenuColumn/OrbStats"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "#Inner orbs: "

[node name="OuterOrbLabel" type="Label" parent="GameplayUi/LeftMenuColumn/OrbStats"]
layout_mode = 0
offset_top = 24.0
offset_right = 103.0
offset_bottom = 47.0
text = "#Outer orbs: "

[node name="HealthUi" type="Control" parent="GameplayUi/LeftMenuColumn"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
grow_vertical = 0
scale = Vector2(3, 3)
script = ExtResource("11_4w2qp")

[node name="HealthLabel" type="Label" parent="GameplayUi/LeftMenuColumn/HealthUi"]
layout_mode = 0
offset_left = 0.333333
offset_top = -58.0
offset_right = 140.333
offset_bottom = -35.0
text = "100/100"

[node name="ArmorLabel" type="Label" parent="GameplayUi/LeftMenuColumn/HealthUi"]
layout_mode = 0
offset_left = 0.333333
offset_top = -76.6667
offset_right = 140.333
offset_bottom = -53.6667
text = "Armor: 0"

[node name="HealthBar" type="ProgressBar" parent="GameplayUi/LeftMenuColumn/HealthUi"]
layout_mode = 0
offset_left = 2.0
offset_top = -29.3333
offset_right = 138.0
offset_bottom = -2.33333
value = 100.0

[node name="ShopUpgrades" type="GridContainer" parent="GameplayUi/LeftMenuColumn"]
layout_mode = 0
offset_left = 3.0
offset_top = 182.0
offset_right = 139.0
offset_bottom = 542.0
scale = Vector2(3, 3)
theme_override_constants/h_separation = 2
theme_override_constants/v_separation = 2
columns = 4
script = ExtResource("5_jxmqa")

[node name="ShopUpgradeButton1" type="TextureButton" parent="GameplayUi/LeftMenuColumn/ShopUpgrades"]
layout_mode = 2
texture_normal = ExtResource("7_vnyei")

[node name="RichTextLabel" type="RichTextLabel" parent="GameplayUi/LeftMenuColumn/ShopUpgrades/ShopUpgradeButton1"]
clip_contents = false
layout_mode = 0
offset_left = 5.0
offset_top = 16.0
offset_right = 29.0
offset_bottom = 33.0
mouse_filter = 1
theme = SubResource("Theme_t5p71")
bbcode_enabled = true
text = "
"
autowrap_mode = 0
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false

[node name="Rarity-Outline" type="TextureButton" parent="GameplayUi/LeftMenuColumn/ShopUpgrades/ShopUpgradeButton1"]
layout_mode = 0
mouse_filter = 1
texture_normal = ExtResource("8_3c8yg")

[node name="ShopUpgradeButton2" type="TextureButton" parent="GameplayUi/LeftMenuColumn/ShopUpgrades"]
layout_mode = 2
texture_normal = ExtResource("7_vnyei")

[node name="RichTextLabel" type="RichTextLabel" parent="GameplayUi/LeftMenuColumn/ShopUpgrades/ShopUpgradeButton2"]
clip_contents = false
layout_mode = 0
offset_left = 5.0
offset_top = 16.0
offset_right = 29.0
offset_bottom = 33.0
mouse_filter = 1
theme = SubResource("Theme_t5p71")
bbcode_enabled = true
text = "
"
autowrap_mode = 0
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false

[node name="Rarity-Outline" type="TextureButton" parent="GameplayUi/LeftMenuColumn/ShopUpgrades/ShopUpgradeButton2"]
layout_mode = 0
mouse_filter = 1
texture_normal = ExtResource("8_3c8yg")

[node name="ShopUpgradeButton3" type="TextureButton" parent="GameplayUi/LeftMenuColumn/ShopUpgrades"]
layout_mode = 2
texture_normal = ExtResource("7_vnyei")

[node name="RichTextLabel" type="RichTextLabel" parent="GameplayUi/LeftMenuColumn/ShopUpgrades/ShopUpgradeButton3"]
clip_contents = false
layout_mode = 0
offset_left = 5.0
offset_top = 16.0
offset_right = 29.0
offset_bottom = 33.0
mouse_filter = 1
theme = SubResource("Theme_t5p71")
bbcode_enabled = true
text = "
"
autowrap_mode = 0
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false

[node name="Rarity-Outline" type="TextureButton" parent="GameplayUi/LeftMenuColumn/ShopUpgrades/ShopUpgradeButton3"]
layout_mode = 0
mouse_filter = 1
texture_normal = ExtResource("8_3c8yg")

[node name="ShopUpgradeButton4" type="TextureButton" parent="GameplayUi/LeftMenuColumn/ShopUpgrades"]
layout_mode = 2
texture_normal = ExtResource("7_vnyei")

[node name="RichTextLabel" type="RichTextLabel" parent="GameplayUi/LeftMenuColumn/ShopUpgrades/ShopUpgradeButton4"]
clip_contents = false
layout_mode = 0
offset_left = 5.0
offset_top = 16.0
offset_right = 29.0
offset_bottom = 33.0
mouse_filter = 1
theme = SubResource("Theme_t5p71")
bbcode_enabled = true
text = "
"
autowrap_mode = 0
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false

[node name="Rarity-Outline" type="TextureButton" parent="GameplayUi/LeftMenuColumn/ShopUpgrades/ShopUpgradeButton4"]
layout_mode = 0
mouse_filter = 1
texture_normal = ExtResource("8_3c8yg")

[node name="ShopUpgradeButton5" type="TextureButton" parent="GameplayUi/LeftMenuColumn/ShopUpgrades"]
layout_mode = 2
texture_normal = ExtResource("7_vnyei")

[node name="RichTextLabel" type="RichTextLabel" parent="GameplayUi/LeftMenuColumn/ShopUpgrades/ShopUpgradeButton5"]
clip_contents = false
layout_mode = 0
offset_left = 5.0
offset_top = 16.0
offset_right = 29.0
offset_bottom = 33.0
mouse_filter = 1
theme = SubResource("Theme_t5p71")
bbcode_enabled = true
text = "
"
autowrap_mode = 0
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false

[node name="Rarity-Outline" type="TextureButton" parent="GameplayUi/LeftMenuColumn/ShopUpgrades/ShopUpgradeButton5"]
layout_mode = 0
mouse_filter = 1
texture_normal = ExtResource("8_3c8yg")

[node name="ShopUpgradeButton6" type="TextureButton" parent="GameplayUi/LeftMenuColumn/ShopUpgrades"]
layout_mode = 2
texture_normal = ExtResource("7_vnyei")

[node name="RichTextLabel" type="RichTextLabel" parent="GameplayUi/LeftMenuColumn/ShopUpgrades/ShopUpgradeButton6"]
clip_contents = false
layout_mode = 0
offset_left = 5.0
offset_top = 16.0
offset_right = 29.0
offset_bottom = 33.0
mouse_filter = 1
theme = SubResource("Theme_t5p71")
bbcode_enabled = true
text = "
"
autowrap_mode = 0
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false

[node name="Rarity-Outline" type="TextureButton" parent="GameplayUi/LeftMenuColumn/ShopUpgrades/ShopUpgradeButton6"]
layout_mode = 0
mouse_filter = 1
texture_normal = ExtResource("8_3c8yg")

[node name="ShopUpgradeButton7" type="TextureButton" parent="GameplayUi/LeftMenuColumn/ShopUpgrades"]
layout_mode = 2
texture_normal = ExtResource("7_vnyei")

[node name="RichTextLabel" type="RichTextLabel" parent="GameplayUi/LeftMenuColumn/ShopUpgrades/ShopUpgradeButton7"]
clip_contents = false
layout_mode = 0
offset_left = 5.0
offset_top = 16.0
offset_right = 29.0
offset_bottom = 33.0
mouse_filter = 1
theme = SubResource("Theme_t5p71")
bbcode_enabled = true
text = "
"
autowrap_mode = 0
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false

[node name="Rarity-Outline" type="TextureButton" parent="GameplayUi/LeftMenuColumn/ShopUpgrades/ShopUpgradeButton7"]
layout_mode = 0
mouse_filter = 1
texture_normal = ExtResource("8_3c8yg")

[node name="ShopUpgradeButton8" type="TextureButton" parent="GameplayUi/LeftMenuColumn/ShopUpgrades"]
layout_mode = 2
texture_normal = ExtResource("7_vnyei")

[node name="RichTextLabel" type="RichTextLabel" parent="GameplayUi/LeftMenuColumn/ShopUpgrades/ShopUpgradeButton8"]
clip_contents = false
layout_mode = 0
offset_left = 5.0
offset_top = 16.0
offset_right = 29.0
offset_bottom = 33.0
mouse_filter = 1
theme = SubResource("Theme_t5p71")
bbcode_enabled = true
text = "
"
autowrap_mode = 0
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false

[node name="Rarity-Outline" type="TextureButton" parent="GameplayUi/LeftMenuColumn/ShopUpgrades/ShopUpgradeButton8"]
layout_mode = 0
mouse_filter = 1
texture_normal = ExtResource("8_3c8yg")

[node name="GoldLabel" type="RichTextLabel" parent="GameplayUi/LeftMenuColumn"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -415.0
offset_top = -41.0
offset_right = -286.0
offset_bottom = -7.0
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(3, 3)
text = "Gold: $0"

[node name="RerollContainer" type="HBoxContainer" parent="GameplayUi/LeftMenuColumn"]
layout_mode = 0
offset_left = 2.0
offset_top = 395.0
offset_right = 138.0
offset_bottom = 427.0
scale = Vector2(3, 3.079)

[node name="BuyButton" type="TextureButton" parent="GameplayUi/LeftMenuColumn/RerollContainer"]
layout_mode = 2
theme = ExtResource("8_4ctao")
texture_normal = ExtResource("9_yckrj")

[node name="RerollButton" type="TextureButton" parent="GameplayUi/LeftMenuColumn/RerollContainer"]
layout_mode = 2
texture_normal = ExtResource("10_btva0")

[node name="WaveLabel" type="RichTextLabel" parent="GameplayUi/LeftMenuColumn"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = -6.0
offset_right = -15.0
offset_bottom = 28.0
grow_horizontal = 2
scale = Vector2(3, 3)
text = "Wave 1"

[node name="WaveProgressBar" type="ProgressBar" parent="GameplayUi/LeftMenuColumn"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -207.0
offset_top = 73.0
offset_right = -71.0
offset_bottom = 100.0
grow_horizontal = 2
scale = Vector2(3, 3)
show_percentage = false

[node name="RightMenuColumn" type="Control" parent="GameplayUi"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -420.0
offset_top = -540.0
offset_right = -280.0
offset_bottom = -180.0
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(3, 3)

[node name="KillsLabel" type="RichTextLabel" parent="GameplayUi/RightMenuColumn"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -65.3333
offset_top = 4.33333
offset_right = 62.6667
offset_bottom = 38.3333
grow_horizontal = 2
text = "Kills: 0
"

[node name="DamageDictionary" parent="GameplayUi/RightMenuColumn" instance=ExtResource("18_dwmxg")]
layout_mode = 0
offset_left = 6.0
offset_top = 32.6667
offset_right = 162.0
offset_bottom = 100.667
scale = Vector2(0.5, 0.5)

[node name="ParticleNode" type="Node2D" parent="."]

[node name="Circle" parent="." instance=ExtResource("13_o8hoq")]
z_index = -300
position = Vector2(960, 540)
scale = Vector2(2, 2)

[node name="Tooltip" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("22_q1apf")

[node name="PanelContainer" type="PanelContainer" parent="Tooltip"]
z_index = 1
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_v52ci")

[node name="MarginContainer" type="MarginContainer" parent="Tooltip/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Label" type="Label" parent="Tooltip/PanelContainer/MarginContainer"]
layout_mode = 2
text = "Hello"

[connection signal="pressed" from="GameplayUi/LeftMenuColumn/RerollContainer/RerollButton" to="GameplayUi/LeftMenuColumn/ShopUpgrades" method="_on_reroll_button_pressed"]
